enable tsplus compat tsconfig

--- a/starter-vite-tsc/tsconfig.json
+++ b/starter-vite-tsc/tsconfig.json
@@ -14,9 +14,16 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "transformers": [{ "name": "@effect/language-service/transformer" }],
-    "tsPlusEnabled": false
+
+    "tsPlusConfig": "./tsplus.config.json",
+    "tsPlusTypes": [
+      "./node_modules/@effect-ts-app/core/vendor/effect-ts-tsplus.json",
+      "./node_modules/@effect-ts-app/core/vendor/effect-io-tsplus.json",
+      "./node_modules/@effect-ts-app/core/vendor/effect-stm-tsplus.json",
+      "./node_modules/@effect-ts-app/core/vendor/fp-ts-data-tsplus.json"
+  ],
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
