--- a/starter-vite-tsc/tsplus.config.json
+++ b/starter-vite-tsc/tsplus.config.json
@@ -1,6 +1,6 @@
 {
   "importMap": {
-    "^(.*)/node_modules/@effect-ts-app/boilerplate-(.*)/_src/(.*)\\.[cm]?[tj]s$": "@effect-ts-app/boilerplate-$2/$3",
+    "^(.*)/node_modules/@effect-app/(.*)/_src/(.*)\\.[cm]?[tj]s$": "@effect-app/$2/$3",
     "^(.*)/node_modules/(.*)\\.[cm]?[tj]s$": "$2"
   }
 }
