--- a/starter-vite-tsc/package.json
+++ b/starter-vite-tsc/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@fp-ts/data": "^0.0.39",
     "@effect/io": "^0.0.65",
-    "@effect-ts-app/core": "^2.4.8",
-    "@effect-ts-app/schema": "^2.3.18",
-    "@effect-ts-app/boilerplate-prelude": "^2.4.8",
-    "@effect-ts-app/boilerplate-react": "^2.3.25",
+    "@effect-app/core": "^0.7.0",
+    "@effect-app/schema": "^0.7.0",
+    "@effect-app/prelude": "^0.7.0",
+    "@effect-app/react": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
