--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 tasks:
   - init: |
-      yarn install
+      pnpm install
       curl -fsSL https://deno.land/x/install/install.sh | sh
       sudo ln -s /home/gitpod/.deno/bin/deno /bin/deno
       cd deno && deno cache src/main.ts && cd ..
